--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -75,4 +75,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: mjovanovik/kii-demo-01:latest
+          tags: anzurakizz/kii-demo-01:latest
